welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: value || is not a member of Unit
  if(isTeen(a) || isTeen(b) || isTeen(c))
               ^hasTeen:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  	return true
               ^hasTeen:10: warning: enclosing method isTeen has result type Unit: return value discarded
  	return true
        ^hasTeen:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  	return false
               ^hasTeen:12: warning: enclosing method isTeen has result type Unit: return value discarded
  	return false
        ^